12_k8s_manifests/ch08-ingress/ingress.yaml
# ==============================================================================
# [SKALA K8s Lab] ch08-ingress/ingress.yaml : SKALA Nginx L7 스마트 Ingress
# ==============================================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-api
  namespace: skala-gj4
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: skala-gj4-shop.skala-gj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shop-api
                port:
                  number: 80
